--- a/SecureDNSClient/NecessaryFiles/Resource1.resx
+++ b/SecureDNSClient/NecessaryFiles/Resource1.resx
@@ -124,6 +124,9 @@
   <data name="dnscrypt_proxyTOML" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>dnscrypt-proxy.toml;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="dnscrypt_proxy_cloudflareTOML" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>dnscrypt-proxy-cloudflare.toml;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="dnslookup" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>dnslookup.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
