--- a/SecureDNSClient/NecessaryFiles/Resource1.resx
+++ b/SecureDNSClient/NecessaryFiles/Resource1.resx
@@ -133,6 +133,12 @@
   <data name="SDCAgnosticServer_X86" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>SDCAgnosticServer-X86.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="SDCLookup_X64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>SDCLookup-X64.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="SDCLookup_X86" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>SDCLookup-X86.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="versions" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>versions.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
